--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.22",
+    "aws-sdk": "^2.836.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
